add bad random bit generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,6 @@ find_package(Boost 1.7 REQUIRED COMPONENTS program_options) #math_c99
 
 add_executable(hypercube src/main.cpp)
 target_link_libraries(hypercube Boost::program_options) # Boost::math_c99)
+
+add_executable(badgenerator src/badgenerator.cpp)
+target_link_libraries(badgenerator Boost::program_options)
