--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 requires = [
-    "setuptools>=42",
+    "setuptools",
     "scikit-build>=0.13",
-    "cmake>=3.18"
-#    "ninja",
+    "cmake",
+    "ninja",
 ]
 build-backend = "setuptools.build_meta"
 
