--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+#Build directory itself
+build
+
+
 *~
 *.autosave
 *.a
